# gw2-scripts

./: .gitignore  Bottom Half Output.txt  DataDiff.py  DataSnapshot.py  GW2 Hotkeys.ahk  GreyPSM7Output.txt  README.md  Research.ahk  Top Half Output.txt  account_snapshot.py  ambergris.py  ascended_trinkets.py  bltc_data_fetcher.py  bookkeeper.py  buyout.py  character_disciplines.py  check_cv.py  clover.py  coloredOutput.txt  craftprofit.py  cv_drop_rate_tool.py  cv_tp.py  cv_tp_process.py  dragonjade.py  drop_rate.py  drop_track_tool.py  ecto_crafting.py  essence.py  firstline.txt  fractal_relic_helper.py  gen_gear_opt_tables.py  greyedOutput.txt  heart_trading_post_items.py  history_totals.py  imperialfavor.py  incense.py  infusion.py  longest_sales.py  loot_bags.py  loot_tool.py  (+22 more)
bltc/: api.py  historical_data.py
gear_opt/: Cargo.toml
gear_opt/src/: character.rs  gear.rs  generated.rs  macros.rs  main.rs  stats.rs
gear_opt/src/effect/: boon.rs  food.rs  macros.rs  mod.rs  rune.rs  sigil.rs  utility.rs
gear_opt/src/optimize/: coarse.rs  fine.rs  mod.rs
gw2/: api.py  build.py  character.py  constants.py  items.py  itemstats.py  mystic_forge.py  recipes.py  trading_post.py  util.py
gw2_builds/: __main__.py  metabattle.py  util.py
read_coredump/: Cargo.toml
read_coredump/src/: lib.rs  main.rs  types.rs
