[package]
name = "read_coredump"
version = "0.1.0"
edition = "2021"
default-run = "read_coredump"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.8.0"
lru = "0.16.0"
memmap2 = "0.9.5"
nix = { version = "0.30.1", features = ["uio", "process"] }

[profile.dev]
opt-level = 3
